--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@iconscout/react-unicons": "^2.0.2",
     "@sumsub/websdk": "^1.3.0",
     "@sumsub/websdk-react": "^1.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aos": "^2.3.4",
+    "apexcharts": "^3.41.0",
     "axios": "^0.24.0",
     "country-list-js": "^3.1.7",
+    "dateformat": "^5.0.3",
     "formik": "^2.2.9",
+    "framer-motion": "4.1.17",
     "i18next": "^21.3.2",
     "multicoin-address-validator": "^0.5.12",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-helmet": "^6.1.0",
